# AlayaLite

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .typo.toml  AGENTS.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  REPORT-blind-failclosed.md  REPORT-hnsw-retirement.md  REPORT-laser-ip.md  REPORT-u2b.md  REPORT-u2c.md  REPORT-u4-preflight.md  REPORT-wal-2a.md  REPORT-wal-2b.md  REPORT-wal-2c.md  REPORT.md  REUSE.toml  THIRD_PARTY_NOTICES.md  claude_codex_workflow_v1.2.md  codecov.yml  conanfile.py  mkdocs.yml  pyproject.toml  pytest.ini
benchmark/index/: CMakeLists.txt  bench_hnsw_deep1m.toml  bench_hnsw_sift1m.toml  bench_utils.hpp  build_vamana_graph.cpp  diskann_search_bench.cpp  diskann_searcher_benchmark.cpp  diskann_update_bench.cpp  graph_search_bench.cpp  hnsw_bench.cpp  laser_bench_common.hpp  laser_build_bench.cpp  laser_search_bench.cpp
benchmarks/: CMakeLists.txt  README.md  any_segment_sync_benchmark.cpp  laser_unified_fit_bench.py  parity_lanes_benchmark.cpp  result_contract_benchmark.cpp  run_baseline.py  run_laser_baseline.py
benchmarks/baselines/: README.md
benchmarks/diskann/: CMakeLists.txt  bench_diskann_sift.cpp  diskann_async_sentinel.cpp  make_diskann_sift_update_trace.cpp  topology_preserving_seal_poc.cpp
benchmarks/golden/: generate_artifact_baseline.py
benchmarks/laser/: CMakeLists.txt  bench_laser_oracles.cpp  bench_laser_update_sift.cpp  bench_laser_update_sift_support.hpp  laser_unified_fit_bench.py
benchmarks/laser_alignment/: gen_synth_100k_512d.py  gen_synth_20k_768d.py  tier_a_byte_equal.py  tier_b_statistical.py
benchmarks/perf/: run_baseline.py  run_laser_baseline.py
benchmarks/rabitq/: CMakeLists.txt  rabitq_benchmark.cpp  rabitq_dispatch_benchmark.cpp
benchmarks/simd/: CMakeLists.txt  fht_benchmark.cpp  ip_full_benchmark.cpp  ip_sq4_benchmark.cpp  ip_sq8_benchmark.cpp  l2_sqr_full_benchmark.cpp  l2_sqr_sq4_benchmark.cpp  l2_sqr_sq8_benchmark.cpp
benchmarks/size_map/: README.md  baseline.json  generate_size_map.py
python/: .pylintrc  CMakeLists.txt  Makefile  README.md  environment.yaml  pyproject.toml  setup.py
python/benchmarks/: disk_laser_smoke.py  laser_unified_fit_bench.py  laser_unified_fit_plot.py
python/include/: base_py_index.hpp  client.hpp  collection_binding.hpp  disk_collection.hpp  diskann.hpp  dispatch.hpp  dispatch_generated.hpp  index.hpp  index_factory.hpp  materialized_view.hpp  memory_engine_registry.hpp  params.hpp  parse.hpp  py_laser_index.hpp  reg.hpp
python/src/: collection_binding_factory_impl.cpp  collection_binding_lifecycle.cpp  collection_binding_management_impl.cpp  collection_binding_mutation.cpp  collection_binding_mutation_impl.cpp  collection_binding_read_impl.cpp  collection_binding_search.cpp  collection_binding_search_impl.cpp  collection_binding_types.cpp  diskann_bindings.cpp  index_factory.cpp  pybind.cpp
python/tests/: _laser_support.py  test_calc_recall.py  test_client.py  test_client_with_url.py  test_collection.py  test_hybrid_search.py  test_index_types.py  test_laser_build.py  test_md5.py  test_rabitq_search.py  test_recovery.py  test_update.py  test_vec_loader.py
tests/: CMakeLists.txt  pch_anchor.cpp
tests/build_matrix/: CMakeLists.txt  public_disk_header.cpp  public_diskann_header.cpp  public_graph_header.cpp  public_recovery_header.cpp  public_space_header.cpp
tests/collection/: CMakeLists.txt  collection_active_laser_maintenance_test.cpp  collection_active_laser_recovery_test.cpp  collection_active_laser_test.cpp  collection_checkpoint_header_closure.cpp  collection_facade_importer_test.cpp  collection_facade_stress_test.cpp  collection_facade_test.cpp  collection_flat_target_header_closure.cpp  collection_header_closure.cpp  collection_hnsw_qg_parity_test.cpp  collection_hnsw_seal_test.cpp  collection_laser_metric_wiring_test.cpp  collection_laser_recall_floor_test.cpp  collection_laser_target_test.cpp  collection_maintenance_interleaving_test.cpp  collection_nsg_fusion_seal_test.cpp  collection_qg_ip_norm_test.cpp  collection_qg_platform_contract_test.cpp  collection_qg_recall_floor_test.cpp  collection_qg_seal_test.cpp  collection_read_only_test.cpp  collection_rotate_test.cpp  collection_scan_projection_test.cpp  collection_vamana_seal_test.cpp  fake_mutable_segment.hpp  filter_seal_gc_header_closure.cpp  heterogeneous_segment_integration_test.cpp  legacy_adapter_test.cpp  legacy_disk_adapter_header_closure.cpp  legacy_importer_header_closure.cpp  legacy_importer_test.cpp  legacy_memory_adapter_header_closure.cpp  logical_wal_header_closure.cpp  logical_wal_test.cpp  manifest_v2_header_closure.cpp  manifest_v2_test.cpp  mutable_laser_adapter_header_closure.cpp  mutable_laser_adapter_test.cpp  mutation_wal_codec_header_closure.cpp  (+5 more)
tests/compile_checks/: CMakeLists.txt  no_laser_header_closure.cpp  public_disk_header.cpp  public_diskann_header.cpp  public_graph_header.cpp  public_space_header.cpp
tests/core/: CMakeLists.txt  algorithm_registry_header_closure.cpp  any_segment_header_closure.cpp  any_segment_test.cpp  capabilities_header_closure.cpp  check_core_header_boundaries.cmake  compat_header_closure.cpp  core_value_types_test.cpp  index_compat_header_closure.cpp  log_test.cpp  resource_contexts_header_closure.cpp  status_header_closure.cpp  value_types_header_closure.cpp
tests/disk/: CMakeLists.txt  disk_collection_factory_dispatch_test.cpp  disk_collection_test.cpp  disk_flat_builder_test.cpp  disk_flat_searcher_test.cpp  disk_flat_segment_header_closure.cpp  disk_flat_segment_stress_test.cpp  disk_flat_segment_test.cpp  disk_types_test.cpp  disk_vamana_segment_header_closure.cpp  disk_vamana_segment_stress_test.cpp  disk_vamana_segment_test.cpp  gate6_rollback_drill_test.cpp  laser_segment_header_closure.cpp  laser_segment_stress_test.cpp  laser_segment_test.cpp  mmap_file_test.cpp  rabitq_format_separation_test.cpp  segment_factory_test.cpp  segment_manifest_test.cpp  test_disk_collection_laser.cpp  (+16 more)
(+973 files in other folders)
