[build-system]
requires = [
    "setuptools>=65.0.0,<77",
    "pybind11>=2.10.0",
    "wheel",
    "conan>=2.0",
    "scikit-build-core",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "alayalite"
version = "0.1.1a1"
authors = [{ name = "AlayaDB.AI", email = "dev@alayadb.ai" }]

description = "AlayaLite Python extension module"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "pandas>=1.3.3",
]

[project.urls]
"Homepage" = "https://github.com/AlayaDB-AI/AlayaLite"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]
lint = [
    "ruff",
]
api = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "httpx",
]
# Runtime dependencies for the Laser on-disk QG pipeline (see docs/LASER.md).
# Only needed when actually building or searching a Laser index — enable via
# `uv sync --group laser` or include in dev.
laser = [
    "scikit-learn>=1.3",
    "faiss-cpu>=1.7",
    "tqdm>=4.65",
    "psutil>=5.9",
    "matplotlib>=3.7.5",
    # tomllib backport for Python <3.11 (used only by examples/laser/main.py).
    "tomli>=2.0 ; python_version < '3.11'",
]
# Opt-in strict pins for the byte-equality alignment gate in
# scripts/laser_alignment/. Do NOT install this as a normal library
# consumer — the hard equalities exist so tier_a_byte_equal.py can match
# upstream Laser's uv.lock and produce SHA-256-identical PCA/medoid/dsqg
# artifacts on demand. Statistical-equivalence users (Tier B) can rely on
# the `laser` extras alone — `_canonicalize_pca_sign` handles sklearn
# sign-flip drift across 1.3+.
#
# Includes the full `laser` runtime group so that one `uv sync --group
# laser-alignment-gate` invocation is sufficient to run the harness.
# The python_version marker on the strict pins is load-bearing: scikit-
# learn 1.8.0 itself requires Python >=3.11, so on 3.9/3.10 these pins
# resolve to nothing and the gate is effectively unavailable. Byte-exact
# Tier A therefore requires a 3.11+ interpreter.
laser-alignment-gate = [
    { include-group = "laser" },
    "numpy==2.4.4 ; python_version >= '3.11'",
    "scikit-learn==1.8.0 ; python_version >= '3.11'",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "api" },
    { include-group = "laser" },
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "reuse>=5.1.1",
]


# ----------------- build whl begin ------------------
[tool.scikit-build]
cmake.version = ">=3.15,<=3.31"
cmake.build-type = "Release"
wheel.packages = ["python/src/alayalite"]

[tool.scikit-build.cmake.define]
BUILD_TESTING="OFF"
ALAYA_NATIVE_ARCH="OFF"
BUILD_PYTHON="ON"

[tool.cibuildwheel]
build = "cp3{9,10,11,12,13}-*"
build-frontend = "build[uv]"
skip = ["*-musllinux*", "*-manylinux_i686"]
before-build = "python {project}/scripts/conan_build/conan_install.py --project-dir {project}"
container-engine = "docker; create_args: -v ~/.conan2:/root/.conan2"
test-requires = ["pytest", "pytest-asyncio", "httpx", "fastapi", "pyyaml"]
test-command = "python -c \"import platform, sys, alayalite; from alayalite import laser, vamana; assert not (sys.platform.startswith('linux') and platform.machine() in {'x86_64', 'AMD64'} and laser.RawIndex is None); print(alayalite.__version__)\""

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = "yum -y install libaio-devel perl-IPC-Cmd perl-Digest-SHA perl-Time-Piece"

[tool.cibuildwheel.macos]
before-all = "brew install libomp"
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0" }
repair-wheel-command = "delocate-listdeps {wheel} && delocate-wheel -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
before-all = ""
# ----------------- build whl end ------------------

[[tool.uv.index]]
# url = "https://mirrors.sustech.edu.cn/pypi/web/simple" # SUSTech mirror
# url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple" # Tsinghua mirror
url = "https://pypi.org/simple"
default = true

# https://beta.ruff.rs/docs/settings/
[tool.ruff]
line-length = 120
# Exclude a variety of commonly ignored directories.
respect-gitignore = true
# extend-exclude = ["build_support"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "UP006", # Allow using `f"{x=}"` for debugging
    "UP035", # Allow deprecated module
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
