[build-system]
# scikit-build-core is the backend (no setuptools/wheel needed); conan supplies the C++ deps via the
# dependency provider (cmake/AlayaConan.cmake).
requires = [
    "pybind11>=2.10.0",
    "conan>=2.0",
    "scikit-build-core",
]
build-backend = "scikit_build_core.build"

[project]
name = "alayalite"
version = "1.1.0"
authors = [{ name = "AlayaDB.AI", email = "dev@alayadb.ai" }]

description = "AlayaLite Python extension module"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-only" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# numpy is the SDK's only hard runtime dependency (vectors in/out of the pybind module).
dependencies = [
    "numpy>=1.24",
]

# Runtime extras for `pip install alayalite[<extra>]`. dependency-groups below
# (PEP 735) are uv-only and do NOT install for pip / pip-tools consumers.
[project.optional-dependencies]
# Offline LASER artifact-maintenance helpers retained for format tooling.
# The public ``alayalite.laser.Index`` API was removed in 1.1.0.
laser = [
    "scikit-learn>=1.3",
    "faiss-cpu>=1.7",
    "tqdm>=4.65",
]
# alayalite.rag chunkers/embedders. The modules import lazily, so the base wheel works without
# these; instantiating the model-backed classes needs them.
rag = [
    "sentence-transformers>=2.2",
    "langchain-text-splitters>=0.2",
    "FlagEmbedding>=1.2",
]

[project.urls]
"Homepage" = "https://github.com/AlayaDB-AI/AlayaLite"
"Repository" = "https://github.com/AlayaDB-AI/AlayaLite"
"Issues" = "https://github.com/AlayaDB-AI/AlayaLite/issues"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]
lint = [
    "ruff",
]
# Runtime dependencies for offline LASER artifact tooling (see docs/design/LASER.md).
# Only needed when actually building or searching a Laser index — enable via
# `uv sync --group laser` or include in dev.
laser = [
    "scikit-learn>=1.3",
    "faiss-cpu>=1.7",
    "tqdm>=4.65",
    "matplotlib>=3.7.5",
    # The Tier B alignment comparator post-processes results with pandas; the SDK itself does not import it.
    "pandas>=1.3.3",
    # tomllib backport for Python <3.11 (used by the Tier A alignment comparator).
    "tomli>=2.0 ; python_version < '3.11'",
]
# Opt-in strict pins for the byte-equality alignment gate in
# benchmarks/laser/alignment/. Do NOT install this as a normal library
# consumer — the hard equalities exist so tier_a_byte_equal.py can match
# upstream Laser's uv.lock and produce SHA-256-identical PCA/medoid/dsqg
# artifacts on demand. Statistical-equivalence users (Tier B) can rely on
# the `laser` extras alone — `_canonicalize_pca_sign` handles sklearn
# sign-flip drift across 1.3+.
#
# Includes the full `laser` runtime group so that one `uv sync --group
# laser-alignment-gate` invocation is sufficient to run the harness.
# The python_version marker on the strict pins is load-bearing: scikit-
# learn 1.8.0 itself requires Python >=3.11, so on 3.9/3.10 these pins
# resolve to nothing and the gate is effectively unavailable. Byte-exact
# Tier A therefore requires a 3.11+ interpreter.
laser-alignment-gate = [
    { include-group = "laser" },
    "numpy==2.4.4 ; python_version >= '3.11'",
    "scikit-learn==1.8.0 ; python_version >= '3.11'",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "laser" },
    "pyyaml>=6.0",
    "reuse>=5.1.1",
]


# ----------------- build whl begin ------------------
[tool.scikit-build]
# 3.24 floor: the Conan dependency provider rides on CMAKE_PROJECT_TOP_LEVEL_INCLUDES. The `conan`
# CLI itself comes from [build-system].requires, so it is always present inside PEP 517 builds.
cmake.version = ">=3.24,<=3.31"
cmake.build-type = "Release"
wheel.packages = ["python/src/alayalite"]
wheel.license-files = ["LICENSE", "LICENSES/*.txt", "REUSE.toml", "THIRD_PARTY_NOTICES.md"]
sdist.include = ["LICENSE", "LICENSES/*.txt", "REUSE.toml", "THIRD_PARTY_NOTICES.md"]

[tool.scikit-build.cmake.define]
BUILD_TESTING="OFF"
ALAYA_NATIVE_ARCH="OFF"

[tool.cibuildwheel]
build = "cp3{9,10,11,12,13}-*"
build-frontend = "build[uv]"
skip = ["*-musllinux*", "*-manylinux_i686"]
# C++ dependencies install during the CMake configure via the Conan dependency provider (the conan
# CLI lives in the PEP 517 build env, see [build-system].requires); the mounted ~/.conan2 keeps the
# package cache warm across the per-python-version builds and across CI runs.
container-engine = "docker; create_args: -v ~/.conan2:/root/.conan2"
test-requires = ["pytest", "pytest-asyncio", "pyyaml"]
test-command = "pytest -q {project}/python/tests/wheel/test_qg_platform_contract.py"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = "yum -y install libaio-devel perl-IPC-Cmd perl-Digest-SHA perl-Time-Piece"

[tool.cibuildwheel.macos]
before-all = "brew install libomp"
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0" }
repair-wheel-command = "delocate-listdeps {wheel} && delocate-wheel -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
# LASER only uses OpenMP 2.0 constructs (parallel for / critical / schedule),
# so MSVC's default /openmp + vcomp140.dll runtime is sufficient. vcomp140.dll
# is part of the VC Redist and delvewheel either bundles it from the VS install
# or relies on the system VC Redist on the consumer machine.
environment = { CMAKE_GENERATOR = "Visual Studio 17 2022", CMAKE_GENERATOR_PLATFORM = "x64" }
# delvewheel is not bundled by cibuildwheel the way auditwheel / delocate are.
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
# ----------------- build whl end ------------------

[[tool.uv.index]]
# url = "https://mirrors.sustech.edu.cn/pypi/web/simple" # SUSTech mirror
# url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple" # Tsinghua mirror
url = "https://pypi.org/simple"
default = true

# https://beta.ruff.rs/docs/settings/
[tool.ruff]
line-length = 120
# Exclude a variety of commonly ignored directories.
respect-gitignore = true
# extend-exclude = ["build_support"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "UP006", # Allow using `f"{x=}"` for debugging
    "UP035", # Allow deprecated module
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
